--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "2"
 services:
   nginx-react:
     container_name: react-app
@@ -9,6 +8,7 @@ services:
       - "8080:80"
     environment:
       NODE_ENV: production
+
   appserver:
     container_name: express_server
     build:
@@ -16,17 +16,29 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-  otel-collector:
-    image: otel/opentelemetry-collector-contrib
-    volumes:
-      - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
-    environment:
-      HONEYCOMB_API_KEY: $HONEYCOMB_API_KEY 
-    ports:
-      - "1888:1888" # pprof extension
-      - "8888:8888" # Prometheus metrics exposed by the Collector
-      - "8889:8889" # Prometheus exporter metrics
-      - "13133:13133" # health_check extension
-      - "4317:4317" # OTLP gRPC receiver
-      - "4318:4318" # OTLP http receiver
-      - "55679:55679" # zpages extension
+
+  # otel-validator:
+  #   image: otel/opentelemetry-collector-contrib
+  #   volumes:
+  #     - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+  #   environment:
+  #     HONEYCOMB_API_KEY: $HONEYCOMB_API_KEY
+  #   entrypoint:
+  #     [otelcol-contrib validate --config /etc/ottelcol-contrib/config.yaml]
+
+  # otel-collector:
+  #   # depends_on:
+  #   #   - otel-validator
+  #   image: otel/opentelemetry-collector-contrib
+  #   volumes:
+  #     - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+  #   environment:
+  #     HONEYCOMB_API_KEY: $HONEYCOMB_API_KEY
+  #   ports:
+  #     - "1888:1888" # pprof extension
+  #     - "8888:8888" # Prometheus metrics exposed by the Collector
+  #     - "8889:8889" # Prometheus exporter metrics
+  #     - "13133:13133" # health_check extension
+  #     - "4317:4317" # OTLP gRPC receiver
+  #     - "4318:4318" # OTLP http receiver
+  #     - "55679:55679" # zpages extension
