--- a/packages/otel-collector/otel-collector-config.yaml
+++ b/packages/otel-collector/otel-collector-config.yaml
@@ -23,7 +23,7 @@ exporters:
   otlp:
     endpoint: https://api-dogfood.honeycomb.io:443
     headers:
-      "x-honeycomb-team": "$HONEYCOMB_API_KEY"
+      "x-honeycomb-team": "${HONEYCOMB_API_KEY}"
 
 service:
   pipelines:
