--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
     # depends_on:
     #   - otel-validator
     image: otel/opentelemetry-collector-contrib
+    # image: otel/opentelemetry-collector-contrib:latest
     volumes:
       - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
     environment:
