completed example for otel collector

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,17 +29,16 @@ services:
   otel-collector:
     # depends_on:
     #   - otel-validator
-    image: otel/opentelemetry-collector-contrib
-    # image: otel/opentelemetry-collector-contrib:latest
+    container_name: otel-collector-man
+    image: otel/opentelemetry-collector:0.114.0
+    # image: otel/opentelemetry-collector
     volumes:
-      - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+      # n.b. depending on which collector you use (contrib or standard) the directory 
+      # used to access the collector config changes, so the volume must change as well
+      #- ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+      - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol/config.yaml
     environment:
       HONEYCOMB_API_KEY: $HONEYCOMB_API_KEY
     ports:
-      - "1888:1888" # pprof extension
-      - "8888:8888" # Prometheus metrics exposed by the Collector
-      - "8889:8889" # Prometheus exporter metrics
-      - "13133:13133" # health_check extension
       - "4317:4317" # OTLP gRPC receiver
       - "4318:4318" # OTLP http receiver
-      - "55679:55679" # zpages extension
