--- a/packages/client/.env-sample
+++ b/packages/client/.env-sample
@@ -1,4 +1,6 @@
-VITE_HONEYCOMB_API_KEY=your key here
+# ONLY if not using otel-collector, add your honeycomb API key here
+# and uncomment the property in src/Observability.tsx
+# VITE_HONEYCOMB_API_KEY=your key here
 VITE_OTEL_SERVICE_NAME=react-frontend
 VITE_OTEL_EXPORTER_OTLP_ENDPOINT=https://api.honeycomb.io:443
 VITE_APP_SERVER_URL=http://localhost:3000
