--- a/packages/client/.env-sample
+++ b/packages/client/.env-sample
@@ -1,5 +1,5 @@
 # ONLY if not using otel-collector, add your honeycomb API key here
-# and uncomment the property in src/Observability.tsx
+# and uncomment the property in src/ConfigureObservability.tsx
 # VITE_HONEYCOMB_API_KEY=your key here
 VITE_OTEL_SERVICE_NAME=react-frontend
 VITE_OTEL_EXPORTER_OTLP_ENDPOINT=https://api.honeycomb.io:443
