--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,12 +14,15 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.52.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.0",
+    "@opentelemetry/instrumentation-bunyan": "^0.43.0",
     "@opentelemetry/sdk-node": "^0.54.0",
     "bunyan": "^1.8.15",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "pino": "^9.5.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
