--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@honeycombio/opentelemetry-web": "^0.9.0",
-    "@opentelemetry/auto-instrumentations-web": "^0.42.0",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.42.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -21,6 +21,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
