--- a/packages/otel-collector/otel-collector-config.yaml
+++ b/packages/otel-collector/otel-collector-config.yaml
@@ -5,8 +5,10 @@ receivers:
         endpoint: 0.0.0.0:4318
         cors:
           allowed_origins:
-            - "http://localhost:8080"
             - "http://localhost:5173"
+          allowed_headers:
+            - '*'
+
           # allowed_headers:
             # - 'Access-Control-Request-Headers'
             #   - "*"
