--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,10 +16,12 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.0",
     "@opentelemetry/instrumentation-bunyan": "^0.43.0",
     "@opentelemetry/sdk-node": "^0.54.0",
+    "body-parser": "^1.20.3",
     "bunyan": "^1.8.15",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
+    "pg": "^8.13.1",
     "pino": "^9.5.0"
   },
   "devDependencies": {
