--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
     "@honeycombio/opentelemetry-web": "^0.9.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-web": "^0.42.0",
+    "@opentelemetry/sdk-trace-web": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
