--- a/playwright/package.json
+++ b/playwright/package.json
@@ -2,7 +2,10 @@
   "name": "playwright",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "watch": "playwright watch"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
