--- a/packages/otel-collector/otel-collector-config.yaml
+++ b/packages/otel-collector/otel-collector-config.yaml
@@ -22,8 +22,8 @@ processors:
   batch:
 
 exporters:
-  debug:
-    verbosity: detailed
+  # debug:
+  #  verbosity: detailed
   otlp:
     endpoint: https://api-dogfood.honeycomb.io:443
     headers:
@@ -44,4 +44,5 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [debug, otlp]
+      exporters: [otlp]
+      # exporters: [debug, otlp]
