--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openfeature/flagd-provider": "^0.13.1",
+    "@openfeature/js-sdk": "^1.6.1",
+    "@openfeature/server-sdk": "^1.17.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.52.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.0",
@@ -25,6 +28,7 @@
     "pino": "^9.5.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "dotenv": "^16.4.5"
   }
 }
