added url for session timeline view

--- a/packages/client/.env-sample
+++ b/packages/client/.env-sample
@@ -1,6 +1,20 @@
-# ONLY if not using otel-collector, add your honeycomb API key here
-# and uncomment the property in src/ConfigureObservability.tsx
-# VITE_HONEYCOMB_API_KEY=your key here
+# Only include if sending to honeycomb directly (not using OTEL collector)
+
+# api-dogfood
+VITE_HONEYCOMB_API_KEY=your key here
+# prod api team modernity app react-express-demo
+VITE_HONEYCOMB_API_KEY=your key here
 VITE_OTEL_SERVICE_NAME=react-frontend
-VITE_OTEL_EXPORTER_OTLP_ENDPOINT=https://api.honeycomb.io:443
-VITE_APP_SERVER_URL=http://localhost:3000
+VITE_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+VITE_PUBLIC_APP_SERVER_URL=http://localhost:9999
+
+# TODO - convert to using FlagD - for now a simple switch in .env
+# Values are
+#   promise - uses the promise API
+#   async   - uses the async/await API
+VITE_PUBLIC_FF_API_CALL_TYPE=await
+
+## TODO - get this working later
+VITE_PUBLIC_FLAGD_HOST=localhost
+VITE_PUBLIC_FLAGD_PORT=8013
+VITE_PUBLIC_FLAGD_TLS=false
