fixup error handling promises and add message to ui

--- a/packages/server/.env-sample
+++ b/packages/server/.env-sample
@@ -1,5 +1,18 @@
+# What name to give the service
 OTEL_SERVICE_NAME=express-backend
+
+# What protocol to use
 OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
-OTEL_EXPORTER_OTLP_ENDPOINT=https://api.honeycomb.io:443/v1/traces
-OTEL_EXPORTER_OTLP_HEADERS=x-honeycomb-team=yourteamhere
-HONEYCOMB_API_KEY=your honeycomb key here
+
+# How long to randomly pause. This is a max time per request in ms
+DELAY_MAX_MS=2000
+
+# points to our otel collector in packages/otel-collector
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318/v1/traces
+
+# Enable only if not sending data through OTEL Collector
+# HONEYCOMB_API_KEY=api key here
+
+# NOT USED YET
+FLAGD_HOST=flagd
+FLAGD_PORT=8013
