--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node -r ./tracing.js index.js",
+    "start": "node -r ./tracing.js src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
