--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,15 +20,15 @@
     "@opentelemetry/instrumentation-bunyan": "^0.43.0",
     "@opentelemetry/sdk-node": "^0.54.0",
     "body-parser": "^1.20.3",
-    "bunyan": "^1.8.15",
+    "bunyan": "^2.0.5",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "express": "^5.0.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
-    "pino": "^9.5.0"
+    "pino": "^9.5.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
-    "dotenv": "^16.4.5"
+    "@types/node": "^22.10.5"
   }
 }
