--- a/packages/client/.env-sample
+++ b/packages/client/.env-sample
@@ -7,6 +7,7 @@ VITE_HONEYCOMB_API_KEY=your key here
 VITE_OTEL_SERVICE_NAME=react-frontend
 VITE_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
 VITE_PUBLIC_APP_SERVER_URL=http://localhost:9999
+VITE_OTEL_APPSERVER_PROPAGATION_REGEXP=.*
 
 # TODO - convert to using FlagD - for now a simple switch in .env
 # Values are
