--- a/packages/client/.env-sample
+++ b/packages/client/.env-sample
@@ -1,9 +1,3 @@
-# Only include if sending to honeycomb directly (not using OTEL collector)
-
-# api-dogfood
-VITE_HONEYCOMB_API_KEY=your key here
-# prod api team modernity app react-express-demo
-VITE_HONEYCOMB_API_KEY=your key here
 VITE_OTEL_SERVICE_NAME=react-frontend
 VITE_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
 VITE_PUBLIC_APP_SERVER_URL=http://localhost:9999
@@ -13,6 +7,7 @@ VITE_OTEL_APPSERVER_PROPAGATION_REGEXP=.*
 # Values are
 #   promise - uses the promise API
 #   async   - uses the async/await API
+#   async-unwrapped - uses the async/await API but does not wrap the span
 VITE_PUBLIC_FF_API_CALL_TYPE=await
 
 ## TODO - get this working later
