--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@openfeature/web-sdk": "^1.4.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-web": "^0.42.0",
+    "@opentelemetry/context-zone": "^1.30.1",
     "@opentelemetry/sdk-trace-web": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
