--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bundle-size": "npx bundlesize"
   },
   "dependencies": {
     "@honeycombio/opentelemetry-web": "^0.9.0",
