--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,7 +21,8 @@
     "@opentelemetry/context-zone": "^1.30.1",
     "@opentelemetry/sdk-trace-web": "^1.30.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
