--- a/packages/client-manual-async-await/package.json
+++ b/packages/client-manual-async-await/package.json
@@ -6,12 +6,10 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vite",
-    "build": "node compile.js && vite build",
-    "litebuild": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "bundle-size": "npx bundlesize",
-    "size": "size-limit"
+    "bundle-size": "npx bundlesize"
   },
   "dependencies": {
     "@honeycombio/opentelemetry-web": "^0.9.0",
@@ -24,38 +22,24 @@
     "@opentelemetry/sdk-trace-web": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5",
-    "terser": "^5.38.1"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.8",
-    "@babel/preset-env": "^7.26.8",
     "@eslint/js": "^9.13.0",
-    "@size-limit/preset-app": "^11.1.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "babel-plugin-transform-async-to-promises": "^0.8.18",
     "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
-    "size-limit": "^11.1.6",
-    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
-  },
-  "size-limit": [
-    {
-      "path": "dist/**/*.js",
-      "limit": "250 KB"
-    }
-  ]
+  }
 }
