--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,9 @@ services:
     build:
       context: packages/client
       dockerfile: Dockerfile
+      args:
+        - SYMBOLS_PATH=/symbols
+      target: nginx-local
     ports:
       - "5173:80"
     environment:
@@ -18,9 +21,16 @@ services:
       - "9999:8081"
 
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.114.0
+    # image: otel/opentelemetry-collector-contrib:0.114.0
+    image: honeycombio/honeycomb-opentelemetry-collector:latest
+    build:
+      context: packages/client
+      dockerfile: Dockerfile
+      args:
+        - SYMBOLS_PATH=/symbols
+      target: collector-local
     volumes:
-      - ./packages/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+      - ./packages/otel-collector/otel-collector-config.yaml:/config.yaml
     environment:
       HONEYCOMB_API_KEY: $HONEYCOMB_API_KEY
     ports:
@@ -61,3 +71,5 @@ services:
 
 volumes:
   postgres_data:
+  symbols_data:
+    
