--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,9 +14,11 @@
     "@honeycombio/opentelemetry-web": "^0.15.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-web": "^0.46.0",
+    "@opentelemetry/context-zone": "^2.0.0",
     "@opentelemetry/sdk-trace-web": "^2.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
